New daemon.conf from Ubuntu 20.04

--- a/pulse/daemon.conf
+++ b/pulse/daemon.conf
@@ -31,7 +31,7 @@
 ; cpu-limit = no
 
  high-priority = yes
- nice-level = -17
+ nice-level = -15
 
  realtime-scheduling = yes
  realtime-priority = 9
@@ -50,14 +50,17 @@
 ; log-time = no
 ; log-backtrace = 0
 
- resample-method = speex-float-8
+ resample-method = speex-float-10
  avoid-resampling = yes
 ; enable-remixing = yes
 ; remixing-use-all-sink-channels = yes
- enable-lfe-remixing = no
+; remixing-produce-lfe = no
+; remixing-consume-lfe = no
 ; lfe-crossover-freq = 0
 
-flat-volumes = no
+; flat-volumes = no
+
+; rescue-streams = yes
 
 ; rlimit-fsize = -1
 ; rlimit-data = -1
@@ -81,8 +84,8 @@ flat-volumes = no
  default-sample-channels = 2
  default-channel-map = front-left,front-right
 
- default-fragments = 2
- default-fragment-size-msec = 125
+; default-fragments = 4
+; default-fragment-size-msec = 25
 
 ; enable-deferred-volume = yes
 deferred-volume-safety-margin-usec = 1
